# eoto

./: Dockerfile  LICENSE  README.md  eoto.cabal
app/: devel.hs
config/: keter.yml  settings.yml  test-settings.yml
src/: Server.hs  Tutorial.hs
src/api/: Credentials.hs  Images.hs  Users.hs
