name:                eoto
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/deiga/eoto#readme
license:             BSD3
license-file:        LICENSE
author:              Timo Sand
maintainer:          deiga@iki.fi
copyright:           2016 Timo Sand
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
  other-modules:       Api.Images
                      , Api.Users
                      , Api.Credentials
  build-depends:       base >= 4.7 && < 5
                      , servant-server
                      , aeson
                      , aeson-compat
                      , base-compat
                      , mtl
                      , attoparsec
                      , bytestring
                      , string-conversions
                      , time
                      , http-media
                      , warp
                      , directory
                      , wai
  default-language:    Haskell2010

executable eoto-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , eoto
  default-language:    Haskell2010

test-suite eoto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , eoto
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/deiga/eoto
